@@ -40,6 +40,40 @@
 
 #include "talkable-painter.h"
 
+#ifdef Q_WS_WIN
+#include <windows.h>
+#endif
+
+#ifdef Q_WS_WIN
+bool TalkablePainter::useColorsWorkaround()
+{
+	static bool checked = false;
+	static bool use = false;
+	if (checked)
+		return use;
+
+	checked = true;
+
+	// copied from QWindowsVistaStylePrivate::useVista()
+	if (QSysInfo::WindowsVersion < QSysInfo::WV_VISTA || !(QSysInfo::WindowsVersion & QSysInfo::WV_NT_based))
+		return false;
+
+	// inspired by QWindowsXPStylePrivate::useXP()
+	typedef BOOL (WINAPI *PtrIsAppThemed)();
+	typedef BOOL (WINAPI *PtrIsThemeActive)();
+	HMODULE uxThemeHandle = GetModuleHandle(TEXT("UxTheme.dll"));
+	if (uxThemeHandle == NULL)
+		return false;
+	PtrIsAppThemed pIsAppThemed = (PtrIsAppThemed) GetProcAddress(uxThemeHandle, "IsAppThemed");
+	PtrIsThemeActive pIsThemeActive = (PtrIsThemeActive) GetProcAddress(uxThemeHandle, "IsThemeActive");
+	if (pIsAppThemed == NULL || pIsThemeActive == NULL)
+		return false;
+	use = (pIsThemeActive() && pIsAppThemed());
+
+	return use;
+}
+#endif
+
 TalkablePainter::TalkablePainter(const TalkableDelegateConfiguration &configuration, QStyleOptionViewItemV4 option, const QModelIndex &index) :
 		Configuration(configuration), Option(option), Index(index),
 		FontMetrics(Configuration.font()),
@@ -74,8 +108,11 @@ void TalkablePainter::fixColors()
 	// Kadu bug #1531
 	// http://bugreports.qt.nokia.com/browse/QTBUG-15637
 	// for windows only
-	Option.palette.setColor(QPalette::All, QPalette::HighlightedText, Option.palette.color(QPalette::Active, QPalette::Text));
-	Option.palette.setColor(QPalette::All, QPalette::Highlight, Option.palette.base().color().darker(108));
+	if (useColorsWorkaround())
+	{
+		Option.palette.setColor(QPalette::All, QPalette::HighlightedText, Option.palette.color(QPalette::Active, QPalette::Text));
+		Option.palette.setColor(QPalette::All, QPalette::Highlight, Option.palette.base().color().darker(108));
+	}
 #endif
 }
 
